updates on /search placeses
