# docs/swagger.json
@@ -1333,7 +1333,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Sort: top|recent|nearest",
+                        "description": "Sort: top|recent|nearest (default top)",
                         "name": "sort",
                         "in": "query"
                     },
@@ -1347,6 +1347,18 @@
                         "type": "string",
                         "description": "lat,lon for nearest sort",
                         "name": "near",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Search radius in meters (required with sort=nearest)",
+                        "name": "near_max_distance",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Only return places open right now",
+                        "name": "open_now",
                         "in": "query"
                     },
                     {
@@ -3164,12 +3176,7 @@
                     "type": "string"
                 },
                 "created_by_user": {
-                    "description": "CategoryName  *models.I18nText `json:\"category_name,omitempty\"`",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.UserMini"
-                        }
-                    ]
+                    "$ref": "#/definitions/models.UserMini"
                 },
                 "description": {
                     "$ref": "#/definitions/models.I18nText"
@@ -3208,6 +3215,9 @@
                     "type": "string"
                 },
                 "review_count": {
+                    "type": "integer"
+                },
+                "saved_count": {
                     "type": "integer"
                 },
                 "slug": {
